<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">CampusUQ</string>
    <string name="introduccion"> ¿Qué es? \n \nCampus UQ es una aplicación diseñada para suplir algunas de las necesidades que se presentan en el campus de la Universidad del Quindío. \n</string>
    <string name="dirigida"> ¿A quién está dirigida? \n \nEsta aplicación está pensada para el uso de estudiantes, docentes, personal administrativo y otros.</string>
    <string name="version">Versión 1.0 ©</string>
    <string name="desarrolladores"> Desarrolladores \n \nJaime Ramirez Cortes \nMarisol Ocampo \nCarlos A. Ospina </string>

    <!-- nav view -->
    <string name="Inicio">Inicio</string>
    <string name="Directorio">Directorio</string>
    <string name="Noticias">Noticias</string>
    <string name="Sugerencias">Sugerencias</string>
    <string name="Paginaweb">Pagina Web</string>
    <string name="Idioma">Idioma</string>

    <string name="Usuario">Servicio al Cliente </string>
    <string name="correo" translatable="false">android@uniquindio.edu.co</string>
    <string name="buscar">Buscar...</string>

    <!-- idioma -->
    <string name="espanol">Español</string>
    <string name="ingles">Ingles</string>

    <!-- Sugerencia -->
    <string name="sugerencia">Llene los siguientes campos para enviar una sugerencia.</string>
    <string name="calificacion">Calificacion:</string>
    <string name="asunto">Asunto</string>
    <string name="txtsugerencia">Sugerencia:</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>

    <string name="noticia1">Uniquindianos podrán cursar maestría en Inaoe, México</string>

    <string name="detalle1">A feliz término llegó la convocatoria realizada en la Universidad del Quindío por parte del Instituto Nacional de Astrofísica, Óptica y Electrónica (INAOE), ubicado en Puebla, México con el fin de seleccionar a los estudiantes que podrán cursar estudios avanzados en este importante instituto de alta ingeniería, en cumplimiento del convenio suscrito con el alma mater de los quindianos.
    La dinámica académica estuvo en manos de los doctores en Electrónica, María Teresa Sanz  Pascual y  Pedro Rosales Quintero, de nacionalidad española y mexicana respectivamente, quienes dieron a conocer los programas de maestría y doctorado que ofrece la institución a la que representan.
    La primera jornada, realizada el pasado 21 de abril, incluyó una charla informativa orientada por la doctora María Teresa Sanz, en la que se socializaron las áreas de trabajo y los objetivos del Instituto, aplicados a la preparación de investigadores y expertos en campos especializados, en la búsqueda de resolver problemáticas científicas y tecnológicas relacionadas con las diferentes disciplinas que allí se promueven.
    El INAOE tiene a disposición cinco coordinaciones académicas y una planta docente de diferentes países, compuesta por más de 100 profesores versados en diferentes líneas, quienes brindan a los estudiantes aprendizaje personalizado, en razón a que cada asesor tiene a su cargo cuatro alumnos como máximo, asegurando que la educación se efectúe de acuerdo con los parámetros establecidos</string>

    <string name="noticia2">Voces uniquindianas engalanaron el Concurso Interno de la Canción</string>

    <string name="detalle2">Un balance positivo dejó la participación de estudiantes de la Universidad del Quindío en la Sexta versión del Concurso Interno de la Canción. El  evento organizado por el área de Cultura de Bienestar Institucional,  contó con la vinculación de 36 estudiantes que buscaron  un cupo para representar al alma mater en el  Zonal de la Canción de ASCUN, el cual  se realizará en la ciudad de Ibagué el próximo 5 de mayo.
    Los cupos para el Zonal se entregaron al primer puesto de cada modalidad. En la modalidad de Solista Vocal Masculino el primer puesto fue para Johan Mauricio Trejos y el segundo lugar se lo llevó William Orjuela; en la categoría de Solista Vocal Femenino el primer puesto fue para Paula Andrea Uribe y el segundo lugar fue para Luisa Fernanda Jiménez; y la modalidad de Canción Inédita se otorgó a “Inspiración lunar”, canción interpretada por Juan Camilo Carmona quien estuvo acompañado en la guitarra por Oscar Aníbal González.
    Solista femenino y canción inédita.En la modalidad femenina solista, resultó ganadora la interpretación de Paola Andrea Uribe Feria, estudiante de IV Semestre de Licenciatura en Biología y Educación Ambiental. “Me siento muy contenta de haber participado en este concurso y haber cumplido la meta de ganar.  Mi objetivo más que ganar es seguirme formando íntegramente”.</string>

    <string name="noticia3">Cervantes y Shakespeare o la celebración de un misterio</string>

    <string name="detalle3">Hoy es el día del idioma, el día mundial del libro y de los derechos de autor. También es el recordatorio de una aparente coincidencia histórica que se ofrece como pretexto literario y pedagógico para conectar dos de las más grandes influencias en dos de los idiomas más hablados en el planeta: el Español de Cervantes y el Inglés de Shakespeare.
    No se conocieron, según lo afirma la historia oficial. Tampoco existe consenso al respecto de su muerte, según se contextualice en el calendario Juliano o Gregoriano. La fecha del 23 de abril en todo caso no parece ser concreta ni apropiada a la cábala que busca adaptar la co-incidencia de ambas muertes a un juego misterioso y revelador.
    Si se hilvana más delgado en este mismo sentido, siguiendo una publicación del diario El País de 2008, el 23 de abril de 1616 “No murieron ni Cervantes ni Shakespeare, sí lo hizo el Inca Garcilaso de la Vega y también en esa fecha nacieron Vladímir Nabokov, Josep Pla y Manuel Mejía Vallejo”.</string>

    <string name="noticia4">Con participación y decisión la Universidad del Quindío enfrenta el reto de la Acreditación</string>

    <string name="detalle4">Con gran presencia activa y participante de directivos académicos, funcionarios administrativos de todas las dependencias, estudiantes, profesores y diferentes actores de la comunidad académica, acompañados por el señor rector José Fernando Echeverry Murillo y sus vicerrectores, así como por los integrantes de la Oficina de Gestión y Aseguramiento de la Calidad de la Universidad del Quindío, entre otros macroprocesos, se realizó la Jornada de Sensibilización para la Acreditación de Alta Calidad con el doctor Luis Enrique Silva Segura, quien orientó tres intensas jornadas de trabajo a nombre del Consejo Nacional de Acreditación, CNA, dirigiéndose a cada uno de los sectores universitarios con contenidos específicos, tomando siempre en cuenta sus perfiles, funciones y expectativas.
    Según el experto invitado la "Autonomía universitaria responsable debe entenderse como la capacidad de construir con otros y para otros. Es nuestra habilidad para autogestionarnos reflexivamente. Por eso se deben conocer y practicar en profundidad y con convicción las directrices deontológicas (valores institucionales y disciplinares ejercidos en el entorno)  que identifican nuestra labor educativa, fundamentada en un proyecto de país”.</string>

    <string name="noticia5">Biocentrismo y Multitransdiciplinariedad en Congreso Binacional de Contabilidad y Economía sustentable</string>

    <string name="detalle5">El 18 de abril se realizó en el auditorio de Ciencias Básicas y Ciencias Humanas el cuarto Congreso Binacional de "Contabilidad y Economía", evento que contó con la participación de docentes  y directivos uniquindianos;  panelistas de la Universidad de Chapingo  (México) y expositores de la Universidad Libre de Colombia, todos reunidos para de exponer los ejes temáticos: Economía Sustentable, Teoría Tridimensional de la Contabilidad (liderada por el docente uniquindiano Eutimio Mejía Soto) y Economía Solidaria.

    Al final del evento, frente a la Teoría Tridimensional que propone, el profesor Eutimio Mejía Soto afirmó con relación al tema de la sustentabilidad y las riquezas ambientales frente a la riqueza social: "La teoría desde sus orígenes se sustenta en una ética biocéntrica que reconoce el valor intrínseco de la naturaleza, donde vale per se independiente de las consideraciones de utilidad que puedan tener los recursos naturales para los hombres".
    Por otra parte, Ramón Rivera, panelista por la Universidad de Chapingo, expresó sus consideraciones frente al cooperativismo y la economía solidaria: "Colombia tiene una experiencia muy interesante, que realmente hay que recuperar, dar a conocer y de alguna manera aplicar en nuestros países. Yo creo que es una temática que se debe impulsar aún más". Teniendo en cuenta que son conceptos que no se han difundido a profundidad en México y como dijo Rivera, "su implementación puede llegar a influir en el desarrollo de una epistemología del sur".</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

