<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.uniquindio.electiva_android.campusuq.dialogos.Sugerencia">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="@dimen/cabecera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:elevation="5dp"
                android:padding="@dimen/padding_cabecera"
                android:text="@string/sugerencia"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/padding_calificacion">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/calificacion"
                    android:textSize="@dimen/txts"
                    android:textStyle="bold"
                    android:textColor="#858585"/>

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="3"
                    android:stepSize="0.5"
                    android:theme="@style/RatingBar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:src="@drawable/ic_mail" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/Hint">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/asunto"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textSize="@dimen/txts"
                        android:textColorHighlight="@color/colorPrimary"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sugerencia"
                    android:padding="12dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/Hint"
                    app:hintTextAppearance="@style/Hint"
                    android:singleLine="false">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/txtsugerencia"
                        android:inputType="text"
                        android:singleLine="false"
                        android:textColor="#000000"
                        android:textSize="@dimen/txts"
                        android:textColorHighlight="@color/colorPrimary"
                        app:hintTextAppearance="@style/Hint" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                android:paddingRight="24dp"
                android:paddingBottom="24dp">

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:layout_marginRight="12dp"
                    android:textColor="#ffffff"
                    android:theme="@style/btnCancelar"/>

                <Button
                    android:id="@+id/btnEnviar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enviar"
                    android:textColor="#ffffff"
                    android:theme="@style/btnEnviar" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>